// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
  url = env("DATABASE_URL")
}

enum Role {
  ADMIN
  TEACHER
  STUDENT
}

model User {
  id  String @default(cuid()) @id
  email  String  @unique
  firstName  String
  lastName  String
  password  String
  role  Role @default(STUDENT)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  managedCourses Course[] @relation("CourseTeacher" )
  enrolledCourses Course[] @relation("CourseStudents")
  analytics Analytics[] @relation("AnalyticsStudent")
}

model Course {
  id  String @default(cuid()) @id
  title String
  teacher User? @relation("CourseTeacher", fields: [teacherId], references: [id])
  teacherId String?
  ressources Resource[]
  students User[] @relation("CourseStudents")
  quiz Quiz? @relation("CourseQuiz")
}

model Resource{
  id String @default(cuid()) @id
  fileUrl String 
  fileName String
  course Course @relation(fields:[courseId], references : [id])
  courseId String 
  name String
  size Int
  type String
}

model Quiz {
  id        String     @id @default(cuid())
  course    Course     @relation("CourseQuiz", fields: [courseId], references: [id])
  courseId  String @unique
  questions Question[]
  analytics Analytics[] @relation("QuizAnalytics")
}

model Question {
  id        String   @id @default(cuid())
  quiz      Quiz     @relation(fields: [quizId], references: [id])
  quizId    String
  label     String
  answers   Answer[]
}

model Answer {
  id         String   @id @default(cuid())
  question   Question @relation(fields: [questionId], references: [id])
  questionId String
  label      String
  isCorrect  Boolean
}

model Analytics {
 id        String @id @default(cuid())
  student   User   @relation("AnalyticsStudent", fields:[studentId], references:[id])
  studentId String
  quiz      Quiz   @relation("QuizAnalytics",fields:[quizId], references:[id])
  quizId    String
  score     Float

  @@unique([studentId, quizId])

}